--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
                 <div class="features-block">
                     <div class="features-item" aos-init aos-animate" data-aos="fade-left" data-aos-delay="250">
                         <img src="img/features/offer-img.svg" alt="По договору" class="features-image">
-                        <h3 class="features-title">По договору</h3>
+                        <h3 class="features-title">Без посредников</h3>
                         <p class="features-text">
-                            Предоставлю все документы для бухгалтерии: договоры, счета и акты. Работаю как ИП без НДС.
+                            На всех этапах разработки Вы общаетесь напрямую со мной без менеджеров и других промежуточных звеньев.
                         </p>
                     </div>
                     <div class="features-item" aos-init aos-animate" data-aos="fade-left" data-aos-delay="250">
@@ -72,24 +72,23 @@
                     </div>
                     <div class="features-item" aos-init aos-animate" data-aos="fade-left" data-aos-delay="250">
                         <img src="img/features/steps-img.svg" alt="Премежуточные итоги" class="features-image">
-                        <h3 class="features-title">Премежуточные итоги</h3>
+                        <h3 class="features-title">Промежуточные итоги</h3>
                         <p class="features-text">
                             Показываю работу поэтапно, а не в последий момент перед крайним сроком.
                         </p>
                     </div>
                     <div class="features-item" aos-init aos-animate" data-aos="fade-left" data-aos-delay="250">
                         <img src="img/features/storage-img.svg" alt="Хостинг и домен " class="features-image">
-                        <h3 class="features-title">Хостинг и домен</h3>
+                        <h3 class="features-title">Обновление сайта</h3>
                         <p class="features-text">
-                            Если мы договорились о цене проекта, в неё входит всё: домен и хостинг на год + SSL
-                            сертификат.
+                            Вы получите удобную систему управления в зависимости от того, какой контент хотите обновлять.
                         </p>
                     </div>
                     <div class="features-item" aos-init aos-animate" data-aos="fade-left" data-aos-delay="250">
                         <img src="img/features/conversation-img.svg" alt="Не брошу после сдачи" class="features-image">
                         <h3 class="features-title">Не брошу после сдачи</h3>
                         <p class="features-text">
-                            Научу вас или вашего сотрудника пользоваться сайтом, запишу видео-инструкции.
+                            Я предоставляю 60 дней помощи по любым вопросом связанным с вашим сайтом.
                         </p>
                     </div>
                 </div>
