--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                         <img src="img/features/deadline-img.svg" alt="Точно в срок" class="features-image">
                         <h3 class="features-title">Точно в срок</h3>
                         <p class="features-text">
-                            За каждый просроченный день я возвращаю Вам от 1000-2500 рублей в зависимости от проекта.
+                            В договоре прописана моя ответственность за срок проекта. Если просрочу — плачу неустойку.
                         </p>
                     </div>
                     <div class="features-item" aos-init aos-animate" data-aos="fade-left" data-aos-delay="250">
