--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                 <div class="swiper-wrapper">
 										<!-- Slides -->			
 										<div class="swiper-slide projects-slide" aos-init aos-animate" data-aos="fade-up" data-aos-delay="400">
-											<a href="https://crew-dev.github.io/ecology-project/"><img src="img/ecology-img.png"
+											<a href="https://crew-dev.github.io/ecology-project/"><img src="img/mockup/ecology-mockup.png"
 													alt="Сайт строительной компании “Строй Дом”" class="project-image"></a>
 											<div class="project-text">
 												<a class="project-link" href="https://crew-dev.github.io/ecology-project/">
@@ -141,7 +141,7 @@
 										</div>
 
                     <div class="swiper-slide projects-slide" aos-init aos-animate" data-aos="fade-up" data-aos-delay="400">
-                        <a href="https://stroy-dom.github.io"><img src="img/project-stroydom.jpg" alt="Сайт строительной компании “Строй Дом”" class="project-image"></a> 
+                        <a href="https://stroy-dom.github.io"><img src="img/mockup/stroydom-mockup.png" alt="Сайт строительной компании “Строй Дом”" class="project-image"></a> 
                         <div class="project-text">
                             <a class ="project-link" href="https://stroy-dom.github.io"><h3 class="project-title">Сайт строительной компании “Строй Дом”</h3></a> 
                             <div class="project-time">
@@ -172,7 +172,7 @@
 										</div>
                     
                     <div class="swiper-slide projects-slide">
-                       <a href="https://crew-dev.github.io/spacex/"><img src="img/project-spacex.jpg" alt="Промосайт компании “Space X”" class="project-image"></a> 
+                       <a href="https://crew-dev.github.io/spacex/"><img src="img/mockup/spacex-mockup.png" alt="Промосайт компании “Space X”" class="project-image"></a> 
                         <div class="project-text">
                             <a class = "project-link" href="https://crew-dev.github.io/spacex/"><h3 class="project-title">Промосайт компании “Space X”</h3></a> 
                             <div class="project-time">
