--- a/index.html
+++ b/index.html
@@ -27,12 +27,11 @@
             <div class="hero-content">
                 <div class="hero-text">
                     <span class="hero-subtitle" aos-init aos-animate" data-aos="fade-left" data-aos-delay="200">Junior Frontend
-                        developer</span>
+                        Developer</span>
                     <h1 class="hero-title" aos-init aos-animate" data-aos="fade-left" data-aos-delay="350">Владислав
                         Дедиков</h1>
                     <p class="hero-diskription" aos-init aos-animate" data-aos="fade-left" data-aos-delay="550">
-                        Разрабатываю сайты для малого и среднего бизнеса. У меня можно заказать дизайн
-                        и верстку небольшого сайта или Landing page</p>
+                        Разрабатываю различные проекты от лендингов до многостраничных сайтов, а также занимаюсь редизайном уже существующих сайтов. </p>
                     <a href="#portfolio"><button class="button button-hero" data-target="link" aos-init aos-animate" data-aos="fade-left"
                         data-aos-delay="850">ПОСМОТРЕТЬ ПОРТФОЛИО</button></a> 
                 </div>
@@ -46,45 +45,45 @@
     <main>
         <section class="features section">
             <div class="container">
-                <h2 class="section-title" aos-init aos-animate" data-aos="fade-left" data-aos-delay="250">Со мной удобно
+                <h2 class="section-title" aos-init aos-animate" data-aos="fade-left" data-aos-delay="100">Со мной удобно
                     работать</h2>
                 <div class="features-block">
-                    <div class="features-item" aos-init aos-animate" data-aos="fade-left" data-aos-delay="250">
+                    <div class="features-item" aos-init aos-animate" data-aos="fade-left" data-aos-delay="100">
                         <img src="img/features/offer-img.svg" alt="По договору" class="features-image">
                         <h3 class="features-title">Без посредников</h3>
                         <p class="features-text">
                             На всех этапах разработки Вы общаетесь напрямую со мной без менеджеров и других промежуточных звеньев.
                         </p>
                     </div>
-                    <div class="features-item" aos-init aos-animate" data-aos="fade-left" data-aos-delay="250">
+                    <div class="features-item" aos-init aos-animate" data-aos="fade-left" data-aos-delay="100">
                         <img src="img/features/deadline-img.svg" alt="Точно в срок" class="features-image">
                         <h3 class="features-title">Точно в срок</h3>
                         <p class="features-text">
                             В договоре прописана моя ответственность за срок проекта. Если просрочу — плачу неустойку.
                         </p>
                     </div>
-                    <div class="features-item" aos-init aos-animate" data-aos="fade-left" data-aos-delay="250">
+                    <div class="features-item" aos-init aos-animate" data-aos="fade-left" data-aos-delay="100">
                         <img src="img/features/agreement-img.svg" alt="Ценник под вас" class="features-image">
                         <h3 class="features-title">Ценник под вас</h3>
                         <p class="features-text">
                             Если у вас нетиповой проект, сделаю рассчет цены за работу и объясню, как складывается цена.
                         </p>
                     </div>
-                    <div class="features-item" aos-init aos-animate" data-aos="fade-left" data-aos-delay="250">
+                    <div class="features-item" aos-init aos-animate" data-aos="fade-left" data-aos-delay="100">
                         <img src="img/features/steps-img.svg" alt="Премежуточные итоги" class="features-image">
                         <h3 class="features-title">Промежуточные итоги</h3>
                         <p class="features-text">
                             Показываю работу поэтапно, а не в последий момент перед крайним сроком.
                         </p>
                     </div>
-                    <div class="features-item" aos-init aos-animate" data-aos="fade-left" data-aos-delay="250">
+                    <div class="features-item" aos-init aos-animate" data-aos="fade-left" data-aos-delay="100">
                         <img src="img/features/storage-img.svg" alt="Хостинг и домен " class="features-image">
                         <h3 class="features-title">Обновление сайта</h3>
                         <p class="features-text">
                             Вы получите удобную систему управления в зависимости от того, какой контент хотите обновлять.
                         </p>
                     </div>
-                    <div class="features-item" aos-init aos-animate" data-aos="fade-left" data-aos-delay="250">
+                    <div class="features-item" aos-init aos-animate" data-aos="fade-left" data-aos-delay="100">
                         <img src="img/features/conversation-img.svg" alt="Не брошу после сдачи" class="features-image">
                         <h3 class="features-title">Не брошу после сдачи</h3>
                         <p class="features-text">
@@ -100,12 +99,12 @@
 
     <section class="section projects" id="portfolio">
         <div class="container">
-            <h2 class="section-title" id="projects" aos-init aos-animate" data-aos="fade-left" data-aos-delay="250">Последние проекты</h2>
+            <h2 class="section-title" id="projects" aos-init aos-animate" data-aos="fade-left" data-aos-delay="100">Последние проекты</h2>
             <div class="swiper-container projects-slider">
                 <!-- Additional required wrapper -->
                 <div class="swiper-wrapper">
 										<!-- Slides -->			
-										<div class="swiper-slide projects-slide" aos-init aos-animate" data-aos="fade-up" data-aos-delay="400">
+										<div class="swiper-slide projects-slide" aos-init aos-animate" data-aos="fade-up" data-aos-delay="100">
 											<a href="https://crew-dev.github.io/ecology-project/"><img src="img/mockup/ecology-mockup.png"
 													alt="Сайт строительной компании “Строй Дом”" class="project-image"></a>
 											<div class="project-text">
@@ -140,7 +139,7 @@
 											</div>
 										</div>
 
-                    <div class="swiper-slide projects-slide" aos-init aos-animate" data-aos="fade-up" data-aos-delay="400">
+                    <div class="swiper-slide projects-slide" aos-init aos-animate" data-aos="fade-up" data-aos-delay="100">
                         <a href="https://stroy-dom.github.io"><img src="img/mockup/stroydom-mockup.png" alt="Сайт строительной компании “Строй Дом”" class="project-image"></a> 
                         <div class="project-text">
                             <a class ="project-link" href="https://stroy-dom.github.io"><h3 class="project-title">Сайт строительной компании “Строй Дом”</h3></a> 
@@ -164,7 +163,7 @@
                                 <img src="img/project/feedback-icon.svg" alt="Отзыв клиента" class="project-icon">
                                 <div class="project-description">
                                     <p class="project-subtitle">Отзыв клиента</p>
-                                    <p class="project-paragraph">Хочу вырозить благодарность хорошему специалисту Владиславу, за добросовестно проделанную работу, заказывал создание и оформление строительной сайта для нашей компании, Владислав оказалась доброжелателным человеком и хорошим специалистом, мой сайт был готов в короткие сроки, очень доволен спектром предоставленных работ.</p>
+                                    <p class="project-paragraph">Хочу выразить благодарность хорошему специалисту Владиславу, за добросовестно проделанную работу, заказывал создание и оформление строительной сайта для нашей компании, Владислав оказалась доброжелателным человеком и хорошим специалистом, мой сайт был готов в короткие сроки, очень доволен спектром предоставленных работ.</p>
                                 </div>
                             </div>
                             <!-- /.project-feedback -->
@@ -201,7 +200,41 @@
                             <!-- /.project-feedback -->
                         </div>
                     </div>
+
+										<div class="swiper-slide projects-slide">
+                       <a href="https://crew-dev.github.io/arency-store/"><img src="img/mockup/arencystore.png" alt="Промосайт компании “Space X”" class="project-image"></a> 
+                        <div class="project-text">
+                            <a class = "project-link" href="https://crew-dev.github.io/arency-store/"><h3 class="project-title">ArencyStore | Интернет магазин стильной одежды</h3></a> 
+                            <div class="project-time">
+                                <img src="img/project/time-icon.svg" alt="срок" class="project-icon">
+                                <div class="project-description">
+                                    <p class="project-subtitle">Сроки</p>
+                                    <p class="project-paragraph">6 рабочих дня</p>
+                                </div>
+                            </div>
+                            <!-- /.project-time -->
+                            <div class="project-cost">
+                                <img src="img/project/cost-icon.svg" alt="Стоимость" class="project-icon">
+                                <div class="project-description">
+                                    <p class="project-subtitle">Стоимость</p>
+                                    <p class="project-paragraph">17 000 рублей </p>
+                                </div>
+                            </div>
+                            <!-- /.project-cost -->
+                            <div class="project-feedback">
+                                <img src="img/project/feedback-icon.svg" alt="Отзыв клиента" class="project-icon">
+                                <div class="project-description">
+                                    <p class="project-subtitle">Отзыв клиента</p>
+                                    <p class="project-paragraph">Спасибо Владиславу за работу. Сайт сделан качественно и в соответствии с нашими пожеланиями. Надеемся на долговременное сотрудничество.</p>
+                                </div>
+                            </div>
+                            <!-- /.project-feedback -->
+                        </div>
+                    </div>
+
 								</div>
+
+								
 								
                 <!-- If we need pagination -->
                 <div class="projects-pagination"></div>
@@ -212,9 +245,9 @@
 
     <footer class="section">
         <div class="container">
-            <h2 class="section-title" aos-init aos-animate" data-aos="fade-left" data-aos-delay="200">Свяжитесь со мной</h2>
+            <h2 class="section-title" aos-init aos-animate" data-aos="fade-left" data-aos-delay="100">Свяжитесь со мной</h2>
             <div class="contacts-block">
-                <form action="https://formspree.io/myynabdp" method="POST" class="contacts-form" aos-init aos-animate" data-aos="fade-left" data-aos-delay="350">
+                <form action="https://formspree.io/myynabdp" method="POST" class="contacts-form" aos-init aos-animate" data-aos="fade-left" data-aos-delay="100">
                     <p class="form-title">Можете просто оставить заявку, я позвоню вам сегодня</p>
                     <input type="text" name="name" class="input input-name" placeholder="Ваше имя">
                     <input type="email" name="email" class="input input-email" placeholder="Ваша почта">
@@ -222,7 +255,7 @@
                     <button value="Send" class="button form-button">Бесплатная консультация</button>
                 </form>
                 <div class="contacts-text">
-                    <div class="contacts-data" aos-init aos-animate" data-aos="fade-left" data-aos-delay="200">
+                    <div class="contacts-data" aos-init aos-animate" data-aos="fade-left" data-aos-delay="100">
                         <div class="contacts-phone">
                             <p class="contacts-title">Телефон</p>
                             <a class="contacts-link" href="tel:+79267627517">+7 926 762 75 17</a>
@@ -241,7 +274,7 @@
                         </div>
                         <!-- /.contacts-social -->
                     </div>
-                    <div class="social-links" aos-init aos-animate" data-aos="fade-left" data-aos-delay="250">
+                    <div class="social-links" aos-init aos-animate" data-aos="fade-left" data-aos-delay="100">
                         <a href="https://github.com/crew-dev" class="social-link"><img src="img/social/github.svg"
                                 alt="github"></a>
                         <a href="https://vk.com/crew_dev" class="social-link"><img src="img/social/vk.svg" alt="vk"></a>
