--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     <h1 class="hero-title" aos-init aos-animate" data-aos="fade-left" data-aos-delay="350">Владислав
                         Дедиков</h1>
                     <p class="hero-diskription" aos-init aos-animate" data-aos="fade-left" data-aos-delay="550">
-                        Разрабатываю различные проекты от лендингов до многостраничных сайтов, а также занимаюсь редизайном уже существующих сайтов. </p>
+                        Разрабатываю различные проекты от лендингов до многостраничных сайтов, а также занимаюсь редизайном уже существующих проектов. </p>
                     <a href="#portfolio"><button class="button button-hero" data-target="link" aos-init aos-animate" data-aos="fade-left"
                         data-aos-delay="850">ПОСМОТРЕТЬ ПОРТФОЛИО</button></a> 
                 </div>
