--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
                                 <img src="img/project/time-icon.svg" alt="срок" class="project-icon">
                                 <div class="project-description">
                                     <p class="project-subtitle">Сроки</p>
-                                    <p class="project-paragraph">6 рабочих дня</p>
+                                    <p class="project-paragraph">6 рабочих дней</p>
                                 </div>
                             </div>
                             <!-- /.project-time -->
