upd//new-project

--- a/index.html
+++ b/index.html
@@ -103,6 +103,40 @@
             <div class="swiper-container projects-slider">
                 <!-- Additional required wrapper -->
                 <div class="swiper-wrapper">
+
+									
+										<div class="swiper-slide projects-slide">
+                       <a href="https://crew-dev.github.io/tesla/"><img src="img/mockup/tesla.png" alt="Промосайт компании “Tesla”" class="project-image"></a> 
+                        <div class="project-text">
+                            <a class = "project-link" href="https://crew-dev.github.io/tesla/"><h3 class="project-title">Tesla Model S | Промосайт компании Tesla</h3></a> 
+                            <div class="project-time">
+                                <img src="img/project/time-icon.svg" alt="срок" class="project-icon">
+                                <div class="project-description">
+                                    <p class="project-subtitle">Сроки</p>
+                                    <p class="project-paragraph">4 рабочих дня</p>
+                                </div>
+                            </div>
+                            <!-- /.project-time -->
+                            <div class="project-cost">
+                                <img src="img/project/cost-icon.svg" alt="Стоимость" class="project-icon">
+                                <div class="project-description">
+                                    <p class="project-subtitle">Стоимость</p>
+                                    <p class="project-paragraph">6 000 рублей </p>
+                                </div>
+                            </div>
+                            <!-- /.project-cost -->
+                            <div class="project-feedback">
+                                <img src="img/project/feedback-icon.svg" alt="Отзыв клиента" class="project-icon">
+                                <div class="project-description">
+                                    <p class="project-subtitle">Отзыв клиента</p>
+                                    <p class="project-paragraph">
+																			Нашей компании для конференции требовался лендинг и так получилось что на его разработку оставалось очень мало времени. По совету знакомых обратились к Владиславу — Crew Dev. Очень благодарны ему за оперативность и высокое качество работы! Успели сделать все задуманное нами, получился отличный одностраничный сайт.
+																		</p>
+                                </div>
+                            </div>
+                            <!-- /.project-feedback -->
+                        </div>
+                    </div>
 										<!-- Slides -->			
 										<div class="swiper-slide projects-slide" aos-init aos-animate" data-aos="fade-up" data-aos-delay="100">
 											<a href="https://crew-dev.github.io/ecology-project/"><img src="img/mockup/ecology-mockup.png"
@@ -138,6 +172,37 @@
 												<!-- /.project-feedback -->
 											</div>
 										</div>
+
+										<div class="swiper-slide projects-slide">
+                       <a href="https://crew-dev.github.io/arency-store/"><img src="img/mockup/arencystore.png" alt="Промосайт компании “Space X”" class="project-image"></a> 
+                        <div class="project-text">
+                            <a class = "project-link" href="https://crew-dev.github.io/arency-store/"><h3 class="project-title">ArencyStore | Интернет магазин одежды</h3></a> 
+                            <div class="project-time">
+                                <img src="img/project/time-icon.svg" alt="срок" class="project-icon">
+                                <div class="project-description">
+                                    <p class="project-subtitle">Сроки</p>
+                                    <p class="project-paragraph">6 рабочих дней</p>
+                                </div>
+                            </div>
+                            <!-- /.project-time -->
+                            <div class="project-cost">
+                                <img src="img/project/cost-icon.svg" alt="Стоимость" class="project-icon">
+                                <div class="project-description">
+                                    <p class="project-subtitle">Стоимость</p>
+                                    <p class="project-paragraph">17 000 рублей </p>
+                                </div>
+                            </div>
+                            <!-- /.project-cost -->
+                            <div class="project-feedback">
+                                <img src="img/project/feedback-icon.svg" alt="Отзыв клиента" class="project-icon">
+                                <div class="project-description">
+                                    <p class="project-subtitle">Отзыв клиента</p>
+                                    <p class="project-paragraph">Спасибо Владиславу за работу. Сайт сделан качественно и в соответствии с нашими пожеланиями. Надеемся на долговременное сотрудничество.</p>
+                                </div>
+                            </div>
+                            <!-- /.project-feedback -->
+                        </div>
+                    </div>
 
                     <div class="swiper-slide projects-slide" aos-init aos-animate" data-aos="fade-up" data-aos-delay="100">
                         <a href="https://crew-dev.github.io/stroy-dom/"><img src="img/mockup/stroydom-mockup.png" alt="Сайт строительной компании “Строй Дом”" class="project-image"></a> 
@@ -194,43 +259,13 @@
                                 <img src="img/project/feedback-icon.svg" alt="Отзыв клиента" class="project-icon">
                                 <div class="project-description">
                                     <p class="project-subtitle">Отзыв клиента</p>
-                                    <p class="project-paragraph">Спасибо Владиславу за работу. Сайт сделан качественно и в соответствии с нашими пожеланиями. Надеемся на долговременное сотрудничество.</p>
+                                    <p class="project-paragraph">Большое спасибо за оперативность, сайт-визитка был готов и сдан в срок. Все работы велись четко по тех. заданию, получил желаемый результат. Владислава могу смело советовать, в дальнейшем обращусь по поводу контекстной рекламы.</p>
                                 </div>
                             </div>
                             <!-- /.project-feedback -->
                         </div>
                     </div>
 
-										<div class="swiper-slide projects-slide">
-                       <a href="https://crew-dev.github.io/arency-store/"><img src="img/mockup/arencystore.png" alt="Промосайт компании “Space X”" class="project-image"></a> 
-                        <div class="project-text">
-                            <a class = "project-link" href="https://crew-dev.github.io/arency-store/"><h3 class="project-title">ArencyStore | Интернет магазин стильной одежды</h3></a> 
-                            <div class="project-time">
-                                <img src="img/project/time-icon.svg" alt="срок" class="project-icon">
-                                <div class="project-description">
-                                    <p class="project-subtitle">Сроки</p>
-                                    <p class="project-paragraph">6 рабочих дней</p>
-                                </div>
-                            </div>
-                            <!-- /.project-time -->
-                            <div class="project-cost">
-                                <img src="img/project/cost-icon.svg" alt="Стоимость" class="project-icon">
-                                <div class="project-description">
-                                    <p class="project-subtitle">Стоимость</p>
-                                    <p class="project-paragraph">17 000 рублей </p>
-                                </div>
-                            </div>
-                            <!-- /.project-cost -->
-                            <div class="project-feedback">
-                                <img src="img/project/feedback-icon.svg" alt="Отзыв клиента" class="project-icon">
-                                <div class="project-description">
-                                    <p class="project-subtitle">Отзыв клиента</p>
-                                    <p class="project-paragraph">Спасибо Владиславу за работу. Сайт сделан качественно и в соответствии с нашими пожеланиями. Надеемся на долговременное сотрудничество.</p>
-                                </div>
-                            </div>
-                            <!-- /.project-feedback -->
-                        </div>
-                    </div>
 
 								</div>
 
