--- a/index.html
+++ b/index.html
@@ -31,11 +31,10 @@
                     <h1 class="hero-title" aos-init aos-animate" data-aos="fade-left" data-aos-delay="350">Владислав
                         Дедиков</h1>
                     <p class="hero-diskription" aos-init aos-animate" data-aos="fade-left" data-aos-delay="550">
-                        Разрабатываю различные проекты от лендингов до многостраничных сайтов, а также занимаюсь редизайном уже существующих проектов. </p>
-                    <a href="#portfolio"><button class="button button-hero" data-target="link" aos-init aos-animate" data-aos="fade-left"
-                        data-aos-delay="850">ПОСМОТРЕТЬ ПОРТФОЛИО</button></a> 
+                        Занимаюсь разработкой сайтов, которые будут решать Ваши бизнес-задачи. От Landing page до многостраничных и нетиповых проектов. Вы также можете заказать у меня редизайн уже существующего сайта.</p>
+                    <a href="#portfolio"><button class="button-hero" data-target="link">ПОСМОТРЕТЬ ПОРТФОЛИО</button></a>
                 </div>
-                <div class="hero-avatar" aos-init aos-animate" data-aos="fade" data-aos-delay="700"></div>
+                <div class="hero-avatar" aos-init aos-animate" data-aos="fade" data-aos-delay="700"></button>
             </div>
             <!-- /.hero-header -->
         </div>
