--- a/index.html
+++ b/index.html
@@ -26,15 +26,15 @@
             </div>
             <div class="hero-content">
                 <div class="hero-text">
-                    <span class="hero-subtitle" aos-init aos-animate" data-aos="fade-left" data-aos-delay="200">Junior Frontend
+                    <span class="hero-subtitle">Junior Frontend
                         Developer</span>
-                    <h1 class="hero-title" aos-init aos-animate" data-aos="fade-left" data-aos-delay="350">Владислав
+                    <h1 class="hero-title">Владислав
                         Дедиков</h1>
-                    <p class="hero-diskription" aos-init aos-animate" data-aos="fade-left" data-aos-delay="550">
+                    <p class="hero-diskription">
                         Занимаюсь разработкой сайтов, которые будут решать Ваши бизнес-задачи. От Landing page до многостраничных и нетиповых проектов. Вы также можете заказать у меня редизайн уже существующего сайта.</p>
-                    <a href="#portfolio"><button class="button-hero" data-target="link">ПОСМОТРЕТЬ ПОРТФОЛИО</button></a>
+                    <a href="#portfolio"><button class="button-hero" data-target="link" >ПОСМОТРЕТЬ ПОРТФОЛИО</button></a>
                 </div>
-                <div class="hero-avatar" aos-init aos-animate" data-aos="fade" data-aos-delay="700"></button>
+                <div class="hero-avatar"></button>
             </div>
             <!-- /.hero-header -->
         </div>
@@ -44,45 +44,45 @@
     <main>
         <section class="features section">
             <div class="container">
-                <h2 class="section-title" aos-init aos-animate" data-aos="fade-left" data-aos-delay="100">Со мной удобно
+                <h2 class="section-title">Со мной удобно
                     работать</h2>
                 <div class="features-block">
-                    <div class="features-item" aos-init aos-animate" data-aos="fade-left" data-aos-delay="100">
+                    <div class="features-item">
                         <img src="img/features/offer-img.svg" alt="По договору" class="features-image">
                         <h3 class="features-title">Без посредников</h3>
                         <p class="features-text">
                             На всех этапах разработки Вы общаетесь напрямую со мной без менеджеров и других промежуточных звеньев.
                         </p>
                     </div>
-                    <div class="features-item" aos-init aos-animate" data-aos="fade-left" data-aos-delay="100">
+                    <div class="features-item">
                         <img src="img/features/deadline-img.svg" alt="Точно в срок" class="features-image">
                         <h3 class="features-title">Точно в срок</h3>
                         <p class="features-text">
                             В договоре прописана моя ответственность за срок проекта. Если просрочу — плачу неустойку.
                         </p>
                     </div>
-                    <div class="features-item" aos-init aos-animate" data-aos="fade-left" data-aos-delay="100">
+                    <div class="features-item">
                         <img src="img/features/agreement-img.svg" alt="Ценник под вас" class="features-image">
                         <h3 class="features-title">Ценник под вас</h3>
                         <p class="features-text">
                             Если у вас нетиповой проект, сделаю рассчет цены за работу и объясню, как складывается цена.
                         </p>
                     </div>
-                    <div class="features-item" aos-init aos-animate" data-aos="fade-left" data-aos-delay="100">
+                    <div class="features-item">
                         <img src="img/features/steps-img.svg" alt="Премежуточные итоги" class="features-image">
                         <h3 class="features-title">Промежуточные итоги</h3>
                         <p class="features-text">
                             Показываю работу поэтапно, а не в последий момент перед крайним сроком.
                         </p>
                     </div>
-                    <div class="features-item" aos-init aos-animate" data-aos="fade-left" data-aos-delay="100">
+                    <div class="features-item">
                         <img src="img/features/storage-img.svg" alt="Хостинг и домен " class="features-image">
                         <h3 class="features-title">Обновление сайта</h3>
                         <p class="features-text">
                             Вы получите удобную систему управления в зависимости от того, какой контент хотите обновлять.
                         </p>
                     </div>
-                    <div class="features-item" aos-init aos-animate" data-aos="fade-left" data-aos-delay="100">
+                    <div class="features-item">
                         <img src="img/features/conversation-img.svg" alt="Не брошу после сдачи" class="features-image">
                         <h3 class="features-title">Не брошу после сдачи</h3>
                         <p class="features-text">
@@ -98,7 +98,7 @@
 
     <section class="section projects" id="portfolio">
         <div class="container">
-            <h2 class="section-title" id="projects" aos-init aos-animate" data-aos="fade-left" data-aos-delay="100">Последние проекты</h2>
+            <h2 class="section-title" id="projects">Последние проекты</h2>
             <div class="swiper-container projects-slider">
                 <!-- Additional required wrapper -->
                 <div class="swiper-wrapper">
@@ -137,7 +137,7 @@
                         </div>
                     </div>
 										<!-- Slides -->			
-										<div class="swiper-slide projects-slide" aos-init aos-animate" data-aos="fade-up" data-aos-delay="100">
+										<div class="swiper-slide projects-slide">
 											<a href="https://crew-dev.github.io/ecology-project/"><img src="img/mockup/ecology-mockup.png"
 													alt="Сайт строительной компании “Строй Дом”" class="project-image"></a>
 											<div class="project-text">
@@ -203,7 +203,7 @@
                         </div>
                     </div>
 
-                    <div class="swiper-slide projects-slide" aos-init aos-animate" data-aos="fade-up" data-aos-delay="100">
+                    <div class="swiper-slide projects-slide">
                         <a href="https://crew-dev.github.io/stroy-dom/"><img src="img/mockup/stroydom-mockup.png" alt="Сайт строительной компании “Строй Дом”" class="project-image"></a> 
                         <div class="project-text">
                             <a class ="project-link" href="https://crew-dev.github.io/stroy-dom/"><h3 class="project-title">Сайт строительной компании “Строй Дом”</h3></a> 
@@ -279,9 +279,9 @@
 
     <footer class="section">
         <div class="container">
-            <h2 class="section-title" aos-init aos-animate" data-aos="fade-left" data-aos-delay="100">Свяжитесь со мной</h2>
+            <h2 class="section-title">Свяжитесь со мной</h2>
             <div class="contacts-block">
-                <form action="https://formspree.io/myynabdp" method="POST" class="contacts-form" aos-init aos-animate" data-aos="fade-left" data-aos-delay="100">
+                <form action="https://formspree.io/myynabdp" method="POST" class="contacts-form">
                     <p class="form-title">Можете просто оставить заявку, я позвоню вам сегодня</p>
                     <input type="text" name="name" class="input input-name" placeholder="Ваше имя">
                     <input type="email" name="email" class="input input-email" placeholder="Ваша почта">
@@ -289,7 +289,7 @@
                     <button value="Send" class="button form-button">Бесплатная консультация</button>
                 </form>
                 <div class="contacts-text">
-                    <div class="contacts-data" aos-init aos-animate" data-aos="fade-left" data-aos-delay="100">
+                    <div class="contacts-data">
                         <div class="contacts-phone">
                             <p class="contacts-title">Телефон</p>
                             <a class="contacts-link" href="tel:+79267627517">+7 926 762 75 17</a>
@@ -308,7 +308,7 @@
                         </div>
                         <!-- /.contacts-social -->
                     </div>
-                    <div class="social-links" aos-init aos-animate" data-aos="fade-left" data-aos-delay="100">
+                    <div class="social-links">
                         <a href="https://github.com/crew-dev" class="social-link"><img src="img/social/github.svg"
                                 alt="github"></a>
                         <a href="https://vk.com/crew_dev" class="social-link"><img src="img/social/vk.svg" alt="vk"></a>
@@ -324,7 +324,6 @@
     <!-- Подключаем Jquery -->
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <!-- Подключаем JS -->
-    <script src="js/aos.js"></script>
     <script src="js/swiper-bundle.min.js"></script>
     <script src="js/main.js"></script>
     <script src="js/scroll.js"></script>
