--- a/index.html
+++ b/index.html
@@ -32,8 +32,7 @@
                         Дедиков</h1>
                     <p class="hero-diskription" aos-init aos-animate" data-aos="fade-left" data-aos-delay="550">
                         Занимаюсь разработкой сайтов, которые будут решать Ваши бизнес-задачи. От Landing page до многостраничных и нетиповых проектов. Вы также можете заказать у меня редизайн уже существующего сайта.</p>
-                    <button class="button-hero" data-target="link" aos-init aos-animate" data-aos="fade-left"
-                        data-aos-delay="850">ПОСМОТРЕТЬ ПОРТФОЛИО</button>
+                    <a href="#portfolio"><button class="button-hero">ПОСМОТРЕТЬ ПОРТФОЛИО</button></a>
                 </div>
                 <div class="hero-avatar" aos-init aos-animate" data-aos="fade" data-aos-delay="700"></button>
             </div>
