--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap=cyrillic" rel="stylesheet">
     <link rel="stylesheet" href="css/swiper-bundle.min.css">
     <link rel="stylesheet" href="css/style.css">
-    <title>Владислав Дедиков — Frontend разработчик</title>
+    <title>Владислав Дедиков — Frontend разработчик | Crew Dev</title>
 </head>
 
 <body>
