--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 													alt="Сайт строительной компании “Строй Дом”" class="project-image"></a>
 											<div class="project-text">
 												<a class="project-link" href="https://crew-dev.github.io/ecology-project/">
-													<h3 class="project-title">"Экологическая катастрофа 21 века"</h3>
+													<h3 class="project-title">Экологическая катастрофа 21 века</h3>
 												</a>
 												<div class="project-time">
 													<img src="img/project/time-icon.svg" alt="срок" class="project-icon">
