--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
                     <div class="swiper-slide projects-slide" aos-init aos-animate" data-aos="fade-up" data-aos-delay="100">
                         <a href="https://crew-dev.github.io/stroy-dom/"><img src="img/mockup/stroydom-mockup.png" alt="Сайт строительной компании “Строй Дом”" class="project-image"></a> 
                         <div class="project-text">
-                            <a class ="project-link" href="https://crew-dev.github.io/stroy-dom/"><h3 class="project-title">Сайт строительной компании “Строй Дом”</h3></a> 
+                            <a class ="project-link" href="https://crew-dev.github.io/stroy-dom/"><h3 class="project-title">Строительной компания “Строй Дом”</h3></a> 
                             <div class="project-time">
                                 <img src="img/project/time-icon.svg" alt="срок" class="project-icon">
                                 <div class="project-description">
