--- a/index.html
+++ b/index.html
@@ -51,21 +51,21 @@
                         <img src="img/features/deadline-img.svg" alt="Точно в срок" class="features-image">
                         <h3 class="features-title">Точно в срок</h3>
                         <p class="features-text">
-                            В договоре прописана моя ответственность за срок проекта. Если просрочу — плачу неустойку.
+                            В договоре прописана моя ответственность за срок проекта. <br> Если просрочу — плачу неустойку.
                         </p>
                     </div>
                     <div class="features-item">
                         <img src="img/features/agreement-img.svg" alt="Ценник под вас" class="features-image">
                         <h3 class="features-title">Ценник под вас</h3>
                         <p class="features-text">
-                            Если у вас нетиповой проект, сделаю рассчет цены за работу и объясню, как складывается цена.
+                            Если у вас нетиповой проект, сделаю рассчет цены за работу и объясню, <br> как складывается цена.
                         </p>
                     </div>
                     <div class="features-item">
                         <img src="img/features/steps-img.svg" alt="Премежуточные итоги" class="features-image">
                         <h3 class="features-title">Промежуточные итоги</h3>
                         <p class="features-text">
-                            Показываю работу поэтапно, а не в последий момент перед крайним сроком.
+                            Показываю работу поэтапно, <br> а не в последий момент перед крайним сроком.
                         </p>
                     </div>
                     <div class="features-item">
@@ -79,7 +79,7 @@
                         <img src="img/features/conversation-img.svg" alt="Не брошу после сдачи" class="features-image">
                         <h3 class="features-title">Не брошу после сдачи</h3>
                         <p class="features-text">
-                            Я предоставляю 60 дней помощи по любым вопросом связанным с вашим сайтом.
+                            Я предоставляю 60 дней помощи <br> по любым вопросом связанным <br> с вашим сайтом.
                         </p>
                     </div>
                 </div>
