--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             </div>
             <div class="hero-content">
                 <div class="hero-text">
-                    <span class="hero-subtitle">Junior Frontend Developer</span>
+                    <span class="hero-subtitle">Frontend Developer</span>
                     <h1 class="hero-title">Владислав Дедиков</h1>
                     <p class="hero-diskription">
                         Занимаюсь разработкой сайтов, которые будут решать Ваши бизнес-задачи. От Landing page до многостраничных и нетиповых проектов. Вы также можете заказать у меня редизайн уже существующего сайта.</p>
